# sumario

./: .gitlab-ci.yml  Containerfile.builder  Containerfile.release  Makefile  README.md
.bin/: fly
sumario/: .gitignore  Makefile  pyproject.toml
sumario/src/sumario/: app.py  callbacks.py  messages.pot  models.py
sumario/src/sumario/blueprints/: homepage.py  submission.py
sumario/src/sumario/components/: __init__.py  users.py
sumario/src/sumario/settings/: development.py  production.py  testing.py
sumario/src/sumario/static/: Makefile
sumario/src/sumario/templates/sumario/: homepage.html  possiblebot.html  robots.txt
sumario/src/sumario/translations/es/LC_MESSAGES/: messages.mo  messages.po
sumario/tests/: helpers.py
sumario/tests/blueprints/: test_homepage.py  test_submission.py
