[project]
name = "sumario"
dynamic = ["version"]
description = "The best way to handle forms on any website."
authors = [
    {name = "JSTV Solutions", email = "sumario@jstvsolutions.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "AGPL"}
dependencies = [
    "blinker==1.7.0",
    "email-validator==2.1.0.post1",
    "flask-babel==4.0.0",
    "flask-mail==0.9.1",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "flask-user==1.0.2.2",
    "flask==3.0.0",
    "psycopg2-binary==2.9.9",
    "pyyaml==6.0.1",
    "sentry-sdk[flask]==1.35.0",
    "sqlalchemy-utils==0.41.1",
    "stripe==7.4.0",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://sumar.io"

[project.optional-dependencies]
builder = [
    "bandit==1.7.5",
    "beautifulsoup4==4.12.2",
    "black==23.11.0",
    "build==1.0.3",
    "coverage==7.3.2",
    "html5lib==1.1",
    "pytest-cov==4.1.0",
    "pytest-env==1.1.1",
    "pytest==7.4.3",
    "ruff==0.1.5",
    "safety==2.3.4",
    "twine==4.0.2",
    "wheel==0.41.3",
]

[tool.setuptools.dynamic]
version = {attr = "sumario.__version__"}

[tool.black]
line-length = 110
