[project]
description = "The best way to handle forms on any website."
dynamic = ["version"]
license = {text = "AGPL"}
name = "sumario"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
authors = [
    {name = "JSTV Solutions", email = "sumario@jstvsolutions.com"},
]
dependencies = [
    "blinker",
    "email-validator",
    "flask-babel",
    "flask-mail",
    "flask-migrate",
    "flask-sqlalchemy",
    "flask-user==1.0.2.2",
    "flask",
    "gunicorn",
    "psycopg2-binary",
    "pyyaml",
    "sentry-sdk[flask]",
    "sqlalchemy-utils",
    "stripe",
]
urls = {homepage = "https://sumar.io"}

[dependency-groups]
dev = [
    "bandit",
    "beautifulsoup4",
    "build",
    "coverage",
    "html5lib",
    "pytest-cov",
    "pytest-env",
    "pytest",
    "ruff",
    "safety",
    "twine",
    "wheel",
]

[tool.setuptools.dynamic]
version = {attr = "sumario.__version__"}

[tool.ruff]
line-length = 110

[tool.uv]
package = true
